hosts/talos/pg-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-rw-lb
  namespace: default
  annotations:
    lbipam.cilium.io/ips: "10.1.1.202"
spec:
  type: LoadBalancer
  selector:
    cnpg.io/cluster: pg
    cnpg.io/instanceRole: primary
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
