hosts/talos/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "10.1.1.200"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-fivelabs
      protocol: HTTPS
      port: 443
      hostname: "*.fivelabs.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: fivelabs-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
